--- a/style.css
+++ b/style.css
@@ -229,7 +229,18 @@ nav a:hover
     {
         background-color: #EDEDED;
     }
-
+.triangle_css
+    {
+        position: absolute;
+        width: 0;
+        height: 0;
+        bottom: 40%;
+        left: 65%;
+        border-style: solid;
+        border-width: 15px 10px 0 10px;
+        border-radius: 5px;
+        border-color: #000000 transparent transparent transparent;
+    }
 /* FOOTER */
 .page_top
     {
