--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html
     }
 @font-face
     {
-        font-family: dk;
+        font-family: menu_nav;
         src: url(font/DK\ Longreach.otf)
     }
 @font-face
@@ -30,15 +30,19 @@ html
     }
 @font-face
     {
-        font-family: dayrom;
-        src: url(font/DAYROM__.ttf), url(font/DAYROM_X.ttf)
+        font-family: menu_bulle;
+        src: url(font/Bubblegum.ttf)
     }
 @font-face
     {
-        font-family: bubble;
-        src: url(font/Bubblegum.ttf)
+        font-family: titre;
+        src: url(font/tahoma.ttf)
     }
-
+@font-face
+    {
+        font-family: texte;
+        src: url(font/GeosansLight.ttf)
+    }
 /*page_index*/
 .page_index
     {
@@ -163,7 +167,7 @@ html
         margin-left: 180px;
         text-decoration: none;
         text-shadow: 8px 8px 0 #01b399;
-        font-family: bubble, sans-serif;
+        font-family: menu_bulle, sans-serif;
         font-size: 4rem;
         transition: transform 0.5s ease-in;
     }
@@ -179,8 +183,9 @@ html
         position: sticky;
         width: 100%;
         text-align: center;
-        font-family: dk, sans-serif;
+        font-family: menu_nav, sans-serif;
         font-size: 2.5rem;
+        font-weight: 900;
     }
 .menu
     {
@@ -322,8 +327,11 @@ nav a:hover
 .expo p
     {
         margin: 2% 0;
-        font-family: dayrom, sans-serif;
-        font-size: 1.8rem;
+        font-family: texte, sans-serif;
+        font-size: 1.7rem;
+        line-height: 1.3em;
+        font-weight: bolder;
+        color: #3b3b3b;
     }
 .img_projection
     {
@@ -404,12 +412,13 @@ nav a:hover
         margin: 2% auto;
         padding: 1%;
         text-align: justify;
-        font-family: dayrom, sans-serif;
+        font-family: texte, sans-serif;
         font-size: 1.8rem;
+        font-weight: bolder;
     }
 .introduction
     {
-        margin: 4% 0 2%;
+        margin: 4% 2% 2%;
         padding: 0 2%;
         font-size: 1.5rem;
     }
@@ -426,6 +435,7 @@ nav a:hover
         display: none;
         margin: 0 0 3% 0;
         padding: 0 2%;
+        font-size: 1.5rem;
     }
 .survol
     {
@@ -459,7 +469,7 @@ nav a:hover
         border-top: 4px solid black;
         border-radius: 15px;
         text-align: center;
-        font-family: dk, sans-serif;
+        font-family: libel, sans-serif;
         font-size: 2rem;
     }
 .reponse
@@ -494,14 +504,15 @@ nav a:hover
     }
 .conclusion
     {
-        margin: 4% 0 5%;
+        margin: 4% 8% 5%;
         padding: 0 2%;
+        font-size: 1.4rem;
     }
 .interview h1
     {
         margin: 5% 0 2%;
         text-align: center;
-        font-family: yeseva, sans-serif;
+        font-family: libel, sans-serif;
     }
 
 /* PAGE_CONTACT */
@@ -532,8 +543,9 @@ nav a:hover
         background-color: #ffffff;
         padding: 3% 10%;
         text-align: center;
-        font-family: yeseva,sans-serif;
+        font-family: texte,sans-serif;
         font-size: 1.6rem;
+        font-weight: 900;
     }
 .satisfait
     {
@@ -541,7 +553,7 @@ nav a:hover
     }
 .satif 
     {
-        font-family: dk, sans-serif;
+        font-family: menu_nav, sans-serif;
         font-size: 2.5rem;
     }
 .rep_satif
@@ -568,7 +580,7 @@ nav a:hover
 #avis
     {
         padding: 0 10px;
-        font-family: dk, sans-serif;
+        font-family: menu_nav, sans-serif;
         
     }
 .e_mail, .comment
@@ -597,7 +609,7 @@ nav a:hover
         padding: 5px 10px;
         border: none;
         box-shadow: 2px 2px 0 #00dfc0;
-        font-family: dk, sans-serif;
+        font-family: menu_nav, sans-serif;
         font-size: 1.4rem;
     }
 .envoyer:hover
